fixing bug with overflow content in the head section

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -4,18 +4,21 @@
 *::after {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    overflow-x: hidden;
+  
     
 }
 
 html {
     margin: 0;
     font-size: 62.5%;
+    overflow-x: hidden !important;
 }
 
 body {
     font-family: Arvo, serif;
     margin: 0;
+    overflow-x: hidden !important;
+   
 }
 
 /******** GLOBALS ********/
